--- a/src/assets/scss/resources.scss
+++ b/src/assets/scss/resources.scss
@@ -1,70 +1,75 @@
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-    position: fixed;
-    right: 0;
-    left: 0;
-    z-index: 999;
+  margin-bottom: 0;
+  border-radius: 0;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 999;
 }
 
-html, body {
-    margin: 0;
-    height: 100%;
+html,
+body {
+  margin: 0;
+  height: 100%;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
+.row.content { height: 450px; }
 
 /* Set gray background color and 100% height */
 .sidenav {
-    padding-top: 20px;
-    background-color: #f1f1f1;
-    height: 100%;
+  padding-top: 20px;
+  background-color: #f1f1f1;
+  height: 100%;
 }
+
 a {
-    text-decoration: none !important
+  text-decoration: none !important;
 }
+
 /* Set black background color, white text and some padding */
 footer {
-    background-color: #555;
-    color: white;
-    padding: 15px;
+  background-color: #555;
+  color: white;
+  padding: 15px;
 }
 
 #footer {
-    position:fixed;
-    bottom:0;
-    left:0;
-    width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
-    .sidenav {
-        height: auto;
-        padding: 15px;
-    }
-    .row.content {height:auto;}
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  .row.content { height: auto; }
 }
 
 .div-highlight {
-    border-radius: 5px;
-    width: 50%;
-    background: #FFC627;
+  border-radius: 5px;
+  width: 50%;
+  background: #ffc627;
 }
+
 p {
-    color: black;
+  color: black;
 }
+
 b {
-    color: black;
+  color: black;
 }
 
 .center {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.row{
-    padding: 50px;
+.row {
+  padding: 50px;
 }
