Implemented header and footer auto injection

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -3,6 +3,7 @@ body {
   margin: 0;
   height: 100%;
   color: white;
+  background-color: #202020;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
