--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -44,8 +44,7 @@ body {
 .grid2x2 {
   min-height: 100%;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  flex-flow: row wrap;
 }
 
 .grid2x2 > div {
