--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,1 +1,28 @@
 @import "custom";
+@import "colours";
+
+body {
+  margin: 0;
+  height: 100%;
+  background-color: $background-primary;
+  color: $font-primary;
+  text-decoration: none;
+}
+
+// Mixins:
+
+@mixin border-primary {
+  border: 4px solid $primary;
+  border-spacing: 20px;
+  border-radius: 1rem;
+
+  &:hover {
+    border: 8px solid $secondary;
+  }
+}
+
+.card-primary {
+  @include border-primary;
+
+  background-color: $background-secondary;
+}
