Changed the video cards from flip cards to normal cards sourced from Bootstrap

--- a/src/assets/scss/videos.scss
+++ b/src/assets/scss/videos.scss
@@ -55,36 +55,25 @@ footer {
   text-indent: 1%;
 }
 
-/* Changes to the default params of the flip/trivia cards */
-.trivia-card {
-  --flip-card-transition-duration: 400ms;
-  --flip-card-height: 200px;
-
-  position: relative;
+/* params of divs holding video cards*/
+#video-cards{
+ justify-content: center;
 }
 
-/* Set params of the divs that contain the cards */
-#container {
-  width: auto;
-  padding: 2%;
-  font-size: x-large;
-}
-
-#container-text {
-  padding: 15px;
-}
-
-.card-face {
-  width: auto;
-  display: block;
-  align-items: center;
-  justify-items: center;
-  position: relative;
+/* Changes to the default params of the Bootstrap card class */
+.card {
+  margin: 0.5%;
+  min-width: fit-content;
 }
 
 /* video embed params */
 .video-embed {
-  min-height: fit-content;
-  height: var(--flip-card-height);
-  padding: 2%;
+  width: auto;
+}
+
+/* video tag params */
+#tags{
+  padding: 0%;
+  padding-left: 1%;
+  padding-right: 1%;
 }
