--- a/src/assets/scss/brand-icons.scss
+++ b/src/assets/scss/brand-icons.scss
@@ -6,48 +6,51 @@ This stylesheet includes all brand icons and relevant stylesheet imports for thi
 
  */
 
+@import "colours";
+@import "icons";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
 // Twitter Icon:
 
 .twitter {
-  @extend %fa-icon !optional;
-  @extend .fa-brands;
+  @include fa-icon-brands($fa-var-twitter);
+  @extend .fa-2x;
 
-  &::before {
-    content: fa-content($fa-var-twitter);
-  }
+  color: $secondary;
 }
 
 // YouTube Icon:
 
 .youtube {
-  @extend %fa-icon !optional;
-  @extend .fa-brands;
+  @include fa-icon-brands($fa-var-youtube);
+  @extend .fa-2x;
 
-  &::before {
-    content: fa-content($fa-var-youtube);
-  }
+  color: $secondary;
 }
 
 // GitHub Icon:
 
 .github {
-  @extend %fa-icon !optional;
-  @extend .fa-brands;
+  @include fa-icon-brands($fa-var-github);
+  @extend .fa-2x;
 
-  &::before {
-    content: fa-content($fa-var-github);
-  }
+  color: $secondary;
 }
 
 // Facebook Icon:
 
 .facebook {
-  @extend %fa-icon !optional;
-  @extend .fa-brands;
+  @include fa-icon-brands($fa-var-facebook);
+  @extend .fa-2x;
 
-  &::before {
-    content: fa-content($fa-var-facebook);
-  }
+  color: $secondary;
+}
+
+// Discord Icon:
+
+.discord {
+  @include fa-icon-brands($fa-var-discord);
+  @extend .fa-2x;
+
+  color: $secondary;
 }
