--- a/src/assets/scss/connect.scss
+++ b/src/assets/scss/connect.scss
@@ -1,4 +1,7 @@
 /* Remove the navbar's default margin-bottom and rounded borders */
+
+@import "brand-icons";
+
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
