--- a/src/assets/scss/schedule.scss
+++ b/src/assets/scss/schedule.scss
@@ -1,56 +1,40 @@
-/* Remove the navbar's default margin-bottom and rounded borders
-Also make the navigation bar sticky  */
-.navbar {
-  margin-bottom: 0;
-  border-radius: 0;
-  position: fixed;
-  right: 0;
-  left: 0;
-  z-index: 999;
+@import "main";
+@import "colours";
+
+.calendar {
+  @extend .calendar;
+
+  padding-right: 10px;
 }
 
-html,
-body {
-  margin: 0;
-  height: 100%;
+.clock {
+  @extend .clock;
+
+  padding-right: 10px;
 }
 
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content { height: 450px; }
+.location {
+  @extend .location;
 
-/* Set gray background color and 100% height */
-.sidenav {
-  padding-top: 20px;
-  background-color: #f1f1f1;
-  height: 100%;
+  padding-right: 10px;
 }
 
-/* Set black background color, white text and some padding */
-footer {
-  background-color: #555;
-  color: white;
-  padding: 15px;
-}
+.schedule-card {
+  @extend .btn;
+  @extend .card-primary;
 
-#footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
+  color: $font-primary;
+  margin: 20px;
 
-.col {
-  margin-bottom: 4em;
-}
-
-.display-1 {
-  margin-bottom: 2em;
+  &:hover {
+    color: $font-primary;
+  }
 }
 
 .schedule-divider {
   margin-top: 3em;
   margin-bottom: 3em;
-  border: 1px solid;
+  border: 3px solid #8c1d40;
 }
 
 .display-4 {
@@ -66,11 +50,22 @@ footer {
   margin-bottom: 0.8em;
 }
 
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-  .sidenav {
-    height: auto;
-    padding: 15px;
+.p-2 {
+  border: 4px solid #ffc627;
+  column-gap: 20px;
+  border-spacing: 20px;
+  border-radius: 1rem;
+
+  &:hover {
+    border: 8px solid #8c1d40;
   }
-  .row.content { height: auto; }
+}
+
+.col-md-12 {
+  background-color: #262626;
+}
+
+.row-cols-1 {
+  margin-right: 20px;
+  margin-left: 20px;
 }
