--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,9 +1,11 @@
+@import "colours";
+
 html,
 body {
   margin: 0;
   height: 100%;
   color: white;
-  background-color: #202020;
+  background-color: $background-primary;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -29,8 +31,9 @@ body {
 }
 
 .boxes {
+  background-color: $background-secondary;
   border-radius: 0% 0% 0% 0% / 0% 0% 0% 0%;
-  color: white;
+  color: $font-primary;
   margin: 20px;
   box-shadow: 0 0 10px 5px #ffc627;
   transition: all 0.4s ease;
@@ -59,4 +62,16 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: row;
+}
+
+/* Main banner params */
+#main-banner{
+  background-color: $background-secondary !important;
+  // border-color: #ffc627 !important;
+  // border-width:thin !important;
+}
+
+/* Main banner button params */
+#main-banner-button{
+  margin: 1% !important;
 }
