--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,12 +17,14 @@ body {
 // Mixins:
 
 @mixin border-primary {
-  border: 4px solid $primary;
+  border: 5px solid $primary;
   border-spacing: 20px;
   border-radius: 1rem;
+  transition: color 0.5s;
+  margin: +5px;
 
   &:hover {
-    border: 8px solid $secondary;
+    border: 5px solid $secondary;
   }
 }
 
