--- a/src/assets/scss/schedule.scss
+++ b/src/assets/scss/schedule.scss
@@ -38,38 +38,34 @@
 .schedule-divider {
   margin-top: 3em;
   margin-bottom: 3em;
-  border: 3px solid #8c1d40;
+  border: 2px solid #8c1d40;
+  opacity: 1;
+}
+
+.schedule-category {
+  @include border-primary;
+
+  margin: 20px;
+
+  &:hover {
+    border: 5px solid $primary;
+  }
+
+  >.row > .col > .schedule-card {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+}
+
+.col-lg-4 {
+  min-width: 400px;
 }
 
 .display-4 {
   margin-bottom: 1em;
 }
 
-.column-header {
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
 .column-title {
-  margin-bottom: 0.8em;
-}
-
-.p-2 {
-  border: 4px solid #ffc627;
-  column-gap: 20px;
-  border-spacing: 20px;
-  border-radius: 1rem;
-
-  &:hover {
-    border: 8px solid #8c1d40;
-  }
-}
-
-.col-md-12 {
-  background-color: #262626;
-}
-
-.row-cols-1 {
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
 }
