adding new profile imgs, social links, founder and advisor roles, yellow border to images

--- a/src/assets/scss/about.scss
+++ b/src/assets/scss/about.scss
@@ -3,3 +3,12 @@
 a {
   text-decoration: none !important;
 }
+
+img.border {
+  border-style: solid;
+  border-radius: 999em;
+  width: 210px;
+  height: 210px;
+  padding: 1px;
+  border: 5px solid yellow;
+}
