--- a/src/assets/scss/brand-icons.scss
+++ b/src/assets/scss/brand-icons.scss
@@ -63,3 +63,19 @@ This stylesheet includes all brand icons and relevant stylesheet imports for thi
 
   color: $secondary;
 }
+
+// LinkedIn Icon:
+
+.linkedin {
+  @include fa-icon-brands($fa-var-linkedin);
+  @extend .fa-2x;
+
+  color: $secondary;
+}
+
+.firefox {
+  @include fa-icon-brands($fa-var-firefox);
+  @extend .fa-2x;
+
+  color: $secondary;
+}
