--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,10 +4,19 @@
 
 body {
   margin: 0;
-  height: 100%;
+  min-height: 100%;
   background-color: $background-primary;
   color: $font-primary;
   text-decoration: none;
+}
+
+.core {
+  min-height: 100%;
+  position: relative;
+
+  & > div {
+    padding-bottom: 200px !important;
+  }
 }
 
 // Mixins:
