--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,11 +1,9 @@
-@import "colours";
-
 html,
 body {
   margin: 0;
   height: 100%;
   color: white;
-  background-color: $background-primary;
+  background-color: #202020;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -31,9 +29,8 @@ body {
 }
 
 .boxes {
-  background-color: $background-secondary;
   border-radius: 0% 0% 0% 0% / 0% 0% 0% 0%;
-  color: $font-primary;
+  color: white;
   margin: 20px;
   box-shadow: 0 0 10px 5px #ffc627;
   transition: all 0.4s ease;
@@ -62,16 +59,4 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: row;
-}
-
-/* Main banner params */
-#main-banner{
-  background-color: $background-secondary !important;
-  // border-color: #ffc627 !important;
-  // border-width:thin !important;
-}
-
-/* Main banner button params */
-#main-banner-button{
-  margin: 1% !important;
 }
