Implemented duration in schedule page

--- a/src/assets/scss/icons.scss
+++ b/src/assets/scss/icons.scss
@@ -22,3 +22,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 .clock {
   @include fa-icon-solid($fa-var-clock);
 }
+
+.stopwatch {
+  @include fa-icon-solid($fa-var-stopwatch);
+}
