--- a/src/assets/scss/schedule.scss
+++ b/src/assets/scss/schedule.scss
@@ -31,6 +31,12 @@
   padding-right: 10px;
 }
 
+.stopwatch {
+  @extend .stopwatch;
+
+  padding-right: 10px;
+}
+
 .location {
   @extend .location;
 
@@ -66,6 +72,10 @@
 
   &:focus {
     box-shadow: none;
+  }
+
+  >.card-text {
+    font-size: larger;
   }
 }
 
