Optimised offerings page HTML and stylesheet

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -41,6 +41,7 @@ body {
   @extend .card;
   @include border-primary;
 
+  color: $font-primary;
   background-color: $background-secondary;
 
   >.card-title {
