--- a/src/assets/scss/schedule.scss
+++ b/src/assets/scss/schedule.scss
@@ -59,7 +59,7 @@
 .schedule-card {
   @extend .btn;
   @extend .card-primary;
-
+  display: block;
   margin: 20px;
   min-width: -moz-available;
   min-width: -webkit-fill-available;
