--- a/src/assets/scss/resources.scss
+++ b/src/assets/scss/resources.scss
@@ -55,7 +55,7 @@ footer {
 
 .div-highlight {
   border-radius: 5px;
-  width: 50%;
+  width: auto;
   background: $primary;
 }
 
@@ -65,6 +65,10 @@ h3 {
 
 p {
   color: $font-primary;
+}
+
+p:hover {
+  color: $secondary;
 }
 
 b {
