--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -30,6 +30,20 @@
   padding-right: 3em;
 }
 
+#about {
+  font-size: 18px;
+  border-color: $primary;
+
+  > h1 {
+    text-decoration: underline solid $secondary 3px;
+  }
+
+  > * {
+    padding-left: 3em;
+    padding-right: 3em;
+  }
+}
+
 #schedule-link {
   > h3 {
     text-decoration: underline solid $primary 2px;
